<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/comida1" />


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC000000" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvOrderSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resumen_orden"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

        <ListView
            android:id="@+id/orderListView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:background="#AF5959"
            app:layout_constraintBottom_toTopOf="@id/tvTotal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOrderSummary" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/btnConfirmOrder"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

        <Button
            android:id="@+id/btnConfirmOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmar_orden"
            android:textColor="#FFFFFF"
            android:background="#388E3C"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
